<resources>
    <string name="app_name">Cinemates</string>
    <string name="Accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">La password deve essere maggiore di 5 caratteri</string>
    <string name="login_failed">"Login fallito"</string>
    <string name="AccediFacebook">Accedi con Facebook</string>
    <string name="AccediGoogle">ACCEDI CON GOOGLE</string>
    <string name="la_piattaforma_social">La piattaforma social </string>
    <string name="che_fa_discutere_anche_in_sala">che fa discutere anche in sala!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_continue">Continua</string>
    <string name="inserisci_email">Email</string>
    <string name="continua">Continua</string>
    <string name="inserisciPIN">Inserire PIN</string>
    <string name="alertPIN">Le abbiamo inviato un PIN al suo indirizzo E-mail, digiti il PIN per continuare:</string>
    <string name="btnverifyPIN">Verifica PIN</string>
    <string name="indietro">Indietro</string>
    <string name="descriptionforgottenpassword">Hai dimenticato la password?</string>
    <string name="desclickforgottenpassword">Clicca qui</string>
    <string name="nomeutentenuovo">Nome</string>
    <string name="cognomeutentenuovo">Cognome</string>
    <string name="passwordutentenuovo">Inserisci Password</string>
    <string name="passconfirmutentenuovo">Re-Inserisci Password</string>
    <string name="textpickerdate">Data di nascita</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="sesso">Sesso: </string>
    <string name="creailtuoaccount">CREA IL TUO ACCOUNT</string>
    <string name="username">Username</string>
    <string name="ciak_azione">MOTORE, CIAK E.. AZIONE!</string>
    <string name="poltrona">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifiche">Notifiche</string>
    <string name="home">home</string>
    <string name="profilo">Profilo</string>
    <string name="toprater">TopRater</string>
    <string name="seiqui">seiqui</string>
    <string name="prova">PROVA</string>
    <string name="HOME">HOME</string>
    <string name="toprated">TOP RATED</string>
    <string name="ENTRA">ENTRA</string>
    <string name="LOGO">TODO</string>
    <string name="top_rated_film">Top Rated Film</string>
    <string name="recensioni">Recensioni</string>
    <string name="liste">Liste Film</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="todo1">TODO</string>
    <string name="aggiungi_recensione">Aggiungi Recensione</string>
    <string name="trailer">Trailer</string>
    <string name="film_correlati">Film Correlati</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="cerca">Cerca</string>
    <string name="inserisci_titolo_film">Inserisci Titolo Film...</string>
    <string name="popular_film">Popular Films</string>
    <string name="nome_attore">Nome Attore</string>
    <string name="conosciuto_come">Conosciuto come</string>
    <string name="data_di_nascita">Data Di Nascita</string>
    <string name="luogo_di_nascita">Luogo Di Nascita</string>
    <string name="data_di_morte">Data Di Morte</string>
    <string name="ruolo">Ruolo</string>
    <string name="homepage">Homepage</string>
    <string name="biografia">Biografia</string>
    <string name="upcoming_film">Upcoming Films</string>
    <string name="nome_film">Nome Film</string>
    <string name="titolo_originale">Titolo originale</string>
    <string name="data_di_uscita">Data di uscita</string>
    <string name="lingua_originale">Lingua originale</string>
    <string name="trama">Trama</string>
    <string name="stato">Stato</string>
    <string name="genere">Genere</string>
    <string name="produzione">Produzione</string>
    <string name="immagini_film">Locandine Film</string>
    <string name="cinemates_search">CineSearch</string>
    <string name="aggiungi_a">Aggiungi A ...</string>
    <string name="preferiti">Preferiti</string>
    <string name="todo">TODO</string>
    <string name="RecensioniFatte">Recensioni</string>
    <string name="Amici">Utenti</string>
    <string name="NomeUtente">Nome Utente</string>
    <string name="InformazioniTitle">Info Utente</string>
    <string name="InfoUtente">Info Utente</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="IndirizzoEmail">Indirizzo E-mail</string>
    <string name="Password">Password</string>
    <string name="TestEmail">prova@gmail.com</string>
    <string name="TestNome">Mario</string>
    <string name="CognomeTest">Rossi</string>
    <string name="TestPassword">*******</string>
    <string name="TestUsername">Artorias</string>
    <string name="CercaPerCelebrità">Celebrità</string>
    <string name="Film">Film</string>
    <string name="Birthday">Data di nascita</string>
    <string name="Gender">Sesso</string>
    <string name="TestGender">M</string>
    <string name="inserisci_nome_lista">Inserisci nome lista</string>
    <string name="nome_lista">Nome lista</string>
    <string name="conferma">Conferma</string>
    <string name="annulla">Annulla</string>
    <string name="da_vedere">Da Vedere</string>
    <string name="cosa_vuoi_cercare">Cosa vuoi cercare...</string>
    <string name="recensione_scritte_per">Recensioni</string>
    <string name="scrivi_una_recensione">Scrivi una recensione</string>
    <string name="latest_film">Latest Films</string>
    <string name="nowplayingfilm">Now Playing Films</string>
    <string name="attori_popular">Popular Celebrity</string>
    <string name="TestRichiestaDiAmicizia">Carlo ti ha inviato una richiesta di amicizia.</string>
    <string name="TestReportSegnalazione">La segnalazione [Spoiler es.] è stata accettata, utente bannato dalla piattaforma.</string>
    <string name="titolo_film">Titolo Film:</string>
    <string name="numero_recensioni">Numero Recensioni:</string>
    <string name="voto_medio_cinemates">Voto medio Cinemates:</string>
    <string name="segnala">Segnala</string>
    <string name="data_recensione">Data Recensione:</string>
    <string name="recensione">Recensione:</string>
    <string name="voto">Voto:</string>
    <string name="profilo2">Profilo</string>
    <string name="oppure">- oppure -</string>
    <string name="creapassword">CREA NUOVA PASSWORD</string>
    <string name="confermanuovapassword">Conferma nuova password</string>
    <string name="descrizione">Descrizione</string>
    <string name="utente">Utente</string>
    <string name="invia_recensione">Invia Recensione</string>
    <string name="scrivi_una_recensione_di_massimo_600_caratteri"><i>Scrivi una recensione di max 600 caratteri</i></string>
    <string name="inserisci_valutazione">Inserisci valutazione:</string>
    <string name="confermando_darai_voto_0_al_film_vuoi_continuare">Confermando darai 0 al film vuoi continuare?</string>
    <string name="invia_richiesta">Invia Richiesta</string>
    <string name="carlo_mattia_e_altri_23_amici_in_comune">Carlo Mattia E Altri 23 Amici In Comune</string>
    <string name="genere2">Genere:</string>
    <string name="voto_tmdb">Voto TMDB:</string>
    <string name="voto_cinemates">Voto Cinemates:</string>
    <string name="carlo_mattia_e_altri_23_amici_consigliano_questo_film">Carlo,Mattia e altri 23 amici consigliano questo film</string>
    <string name="inserisci_descrizione">Inserisci descrizione</string>
    <string name="visibilit">Visibilità:</string>
    <string name="inserisci_una_descrizione">Inserisci Una descrizione</string>
    <string name="solo_amici">Solo Amici</string>
    <string name="tutti">Tutti</string>
    <string name="amici">Amici</string>
    <string name="amici_in_comune">Amici in comune</string>
    <string name="conutenuto_inappropriato">Contenuto inappropriato</string>
    <string name="per_quale_motivo_stai_segnalando_la_recensione_di">Per quale motivo stai segnalando la recensione di</string>
    <string name="spoiler">Spoiler</string>
    <string name="razzismo">Razzismo</string>
    <string name="altro">Altro</string>
    <string name="inserisci_qui_il_i_motivi_se_non_presenti">Inserisci qui il/i motivi se non presenti</string>
    <string name="_5">/5</string>
    <string name="inserisci_vecchia_password">Inserisci vecchia password</string>
    <string name="inserisci_nuova_password">Inserisci nuova password</string>
    <string name="conferma_nuova_password">Conferma nuova password</string>
    <string name="ti_ha_inviato_una_richiesta_di_amicizia">ti ha inviato una richiesta di amicizia</string>
    <string name="rimuovi">Rimuovi</string>
    <string name="rifiuta">Rifiuta</string>
    <string name="accetta">Accetta</string>
    <string name="ha_accettato_la_tua_richiesta">ha accettato la tua richiesta</string>
    <string name="la_segnalazione_della_sua_recensione">La segnalazione della recensione del film:</string>
    <string name="per_la_seguente_motivazione">per la seguente motivazione:</string>
    <string name="stata_accettata_per_cui_la_sua_recensione_stata_eliminata">è stata accettata, la recensione è stata eliminata.</string>
    <string name="stata_declinata">è stata declinata.</string>
    <string name="cordialmente">Cordialmente</string>
    <string name="gli_amministratori">Gli Amministratori</string>
    <string name="trama1">Trama:</string>
    <string name="le_mie_recensioni">Le mie recensioni</string>
    <string name="elimina_da_amici">Elimina da amici</string>
    <string name="lista_film">Lista Film:</string>
    <string name="descrizione1">Descrizione:</string>
    <string name="allerta_spoiler">ALLERTA SPOILER!!!!!</string>
    <string name="anche_se_i_nostri_admin_lavorano_per_assicurarsi_che_nessuno_di_voi_riceva_spoiler_sul_film_in_questione_oltrepassando_questa_pagina_potreste_incappare_in_qualche_spoiler_se_cos_fosse_vi_invitiamo_a_segnalare_la_recensione_in_questione">Anche se i nostri admin lavorano per assicurarsi che nessuno di voi riceva spoiler sul film in questione oltrepassando questa pagina potreste incappare in qualche spoiler se così fosse vi invitiamo a segnalare la recensione.</string>
    <string name="lo_staff_di_cinemates">Lo Staff di Cinemates</string>
    <string name="ok">Ok, accetto il rischio</string>
    <string name="noto_per">Noto Per</string>
    <string name="film_in_comune">Film In Comune</string>
    <string name="scegli_una_nuova_foto">Scegli Una Nuova Foto</string>
    <string name="inserisci_nuovo_nome">Inserisci nuovo nome</string>
    <string name="inserisci_nuovo_cognome">Inserisci nuovo cognome</string>
    <string name="inserisci_nuova_descrizione">Inserisci nuova descrizione</string>
    <string name="inserisci_nuova_email">Inserisci nuova email</string>
    <string name="inserisci_nuova_data_di_nascita">Inserisci nuova data di nascita</string>
    <string name="Logout_success">Sei uscito da Cinemates!</string>
    <string name="Hope">Speriamo di rivederti presto!</string>
    <string name="torna_al_menu">Vai alla schermata principale</string>
    <string name="reinserisci_nuova_password">Re-Inserisci nuova password</string>
    <string name="per_quale_motivo_stai">Per quale motivo stai</string>
</resources>