<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0e1111"
    android:orientation="vertical"
    tools:context=".SignIn.RegisterFieldsActivity">

    <!-- INIZIO HEADER -->
    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/createyouraccount"
            android:layout_width="204dp"
            android:layout_height="83dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="12dp"
            android:text="@string/creailtuoaccount"
            android:textColor="#FF8C00"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/sofa"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/poltrona"
            app:srcCompat="@drawable/ic_poltrona" />
    </LinearLayout>
    <!-- FINE HEADER -->

    <!-- INIZIO CONTAINER -->
    <LinearLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/InsertNome"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="56dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_create_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/nomeutentenuovo"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/InsertCognome"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="56dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_create_24"
            android:ems="10"
            android:hint="@string/cognomeutentenuovo"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/InsertPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="56dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/passwordutentenuovo"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/RepeatPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="56dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/passconfirmutentenuovo"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/Bday"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_cake_24"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/textpickerdate"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="18sp" />


        <RadioGroup
            android:id="@+id/Gender"
            android:layout_width="270dp"
            android:layout_height="26dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="71dp"
            android:orientation="horizontal"
            android:theme="@style/RadioButtonStyle">

            <TextView
                android:id="@+id/Sex_text"
                android:layout_width="54dp"
                android:layout_height="25dp"
                android:text="@string/sesso"
                android:textColor="#fff"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="453dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="#fff" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"

                android:textColor="#fff" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="#fff" />

        </RadioGroup>

        <EditText
            android:id="@+id/InsertUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="14dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Confirmation"
            android:layout_width="300dp"
            android:layout_height="51dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="59dp"
            android:layout_marginBottom="68dp"
            android:background="#FF8C00"
            android:drawableEnd="@drawable/ic_iconfinder_movies_and_entertainment_ticket_cinema_theatre_show_6611353"
            android:text="@string/ciak_azione"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- INIZIO CONTAINER -->
    <LinearLayout
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarRegister3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="14dp"
            android:indeterminate="false"
            android:progress="66"
            android:theme="@style/ProgressBarStyle"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
    </LinearLayout>

</LinearLayout>