<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0e1111"
    android:orientation="vertical"
    android:forceDarkAllowed="false"
    tools:context=".Log.ui.login.LoginActivity">

    <!-- AREA LOGO -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="341dp"
            android:layout_height="142dp"
            android:contentDescription="@string/todo1"
            app:srcCompat="@drawable/logo_cinemates" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- AREA LOGIN -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:drawableEnd="@drawable/ic_baseline_alternate_email_24" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <!-- FINE AREA LOGIN -->
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- AREA PASSWORD FORGOTTEN -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/descriptionforgottenpassword"
            android:textColor="#ffffff" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desclickforgottenpassword"
            android:textColor="#2565AE" />

        <!-- END AREA PASSWORD FORGOTTEN -->
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- AREA CONFIRM LOGIN -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/ColorCineOrange"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:drawableTint="@color/ColorCineBlack"
            android:enabled="false"
            android:text="@string/Accedi"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logingoogle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#DB4437"
            android:clickable="true"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_googleminimal"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/AccediGoogle"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp"
            tools:text="Accedi con Google" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginfacebook"
            android:layout_width="300dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#3b5998"
            android:drawableStart="@drawable/ic_facebookminimal2"
            android:enabled="false"
            android:text="@string/AccediFacebook"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp"
            tools:text="Accedi con Facebook" />

        <!-- END AREA LOGIN GOOGLE & FACEBOOK -->

        <!-- END AREA CONFIRM LOGIN -->
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>