<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#0e1111"
    android:forceDarkAllowed="false"
    tools:context=".Main.WelcomeActivity">

    <!-- AREA LOGO -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo1"
            app:srcCompat="@drawable/logo_cinemates" />

        <!-- END AREA LOGO -->
    </LinearLayout>

    <!-- AREA MOTTO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/maven_pro"
            android:text="@string/la_piattaforma_social"
            android:textColor="#FAFAFA"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/maven_pro"
            android:gravity="center"
            android:text="@string/che_fa_discutere_anche_in_sala"
            android:textColor="#FAFAFA"
            android:textSize="20sp"
            android:textStyle="bold" />


        <!-- END AREA MOTTO -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/accedi"
            android:layout_width="220dp"
            android:layout_height="51dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:background="#FF8C00"
            android:textColor="#000000"
            android:text="@string/Accedi"
            android:textSize="18sp" />

        <Button
            android:id="@+id/registrati"
            android:layout_width="220dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:background="#FF8C00"
            android:text="@string/registrati"
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>
